fix: broken css and invalid border class (#688)

--- a/apps/base/assets/css/base.css
+++ b/apps/base/assets/css/base.css
@@ -19,7 +19,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: varinverted;
+  background: var(--ui-bg-inverted);
   border-radius: 5px;
 }
 
